added more pages

--- a/src/component/HeroNav/heroNav.scss
+++ b/src/component/HeroNav/heroNav.scss
@@ -40,7 +40,15 @@
 
     li {
       cursor: pointer;
+
+      a {
+        color: white;
+      }
     }
+  }
+
+  .cart-icon {
+    font-size: 1.5rem;
   }
 }
 
