--- a/src/component/OurProduct/OurProduct.scss
+++ b/src/component/OurProduct/OurProduct.scss
@@ -144,5 +144,16 @@
     grid-template-columns: 1fr;
     align-items: center;
     justify-content: center;
+
+    .product-card-img {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      img {
+        width: 80%;
+        border-radius: 15px;
+      }
+    }
   }
 }
