--- a/src/component/NewsCard/NewsCard.scss
+++ b/src/component/NewsCard/NewsCard.scss
@@ -1,3 +1,6 @@
+@import './../../style/responsive';
+
+
 .news-card {
   display: flex;
   align-items: center;
@@ -45,4 +48,57 @@
     }
   }
 
+}
+
+
+
+//responsive for mobile devices
+@include small {
+
+  .news-card {
+    flex-direction: column;
+
+    div:first-child {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    img {
+      max-width: 80%;
+    }
+
+    .news-card-date {
+      font-size: 1rem;
+      margin-top: 2rem;
+    }
+
+    h1 {
+      font-size: 1.3rem;
+      font-weight: 400;
+    }
+
+    p:nth-child(3) {
+      font-size: 14px;
+      margin-top: 1rem;
+    }
+
+    button {
+      padding: 8px 1.5rem;
+      background: var(--primary-btn);
+      color: white;
+      border: none;
+      outline: none;
+      border-radius: 50px;
+      margin-top: 1rem;
+      cursor: pointer;
+      display: block;
+      margin: 1rem auto;
+
+      &:hover {
+        background: var(--primary-btn-hover);
+      }
+    }
+
+  }
 }
