--- a/src/component/HeroNav/heroNav.scss
+++ b/src/component/HeroNav/heroNav.scss
@@ -115,7 +115,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-
     position: fixed;
     top: 0;
     left: 0;
@@ -125,6 +124,7 @@
   .menu {
     ul {
       font-size: 13px;
+      gap: 0.8rem;
 
       li {
         cursor: pointer;
