--- a/src/component/Contact/ContactInfo.scss
+++ b/src/component/Contact/ContactInfo.scss
@@ -1,3 +1,6 @@
+@import './../../style/responsive';
+
+
 .contact-info {
   width: 70%;
   margin: 2rem auto;
@@ -22,6 +25,39 @@
 
     h4 {
       font-weight: 400;
+    }
+  }
+}
+
+
+@include small {
+
+  .contact-info {
+    width: 70%;
+    margin: 2rem auto;
+    display: grid;
+    grid-template-columns: 1fr;
+    align-items: center;
+    justify-content: center;
+
+    div {
+      text-align: center;
+      margin: 1rem auto;
+
+      .contact-info-icon {
+        font-size: 3rem;
+        opacity: 0.6;
+      }
+
+      h3 {
+        font-size: 1.3rem;
+        opacity: 0.6;
+        font-weight: 500;
+      }
+
+      h4 {
+        font-weight: 400;
+      }
     }
   }
 }
