--- a/src/component/HeroNav/heroNav.scss
+++ b/src/component/HeroNav/heroNav.scss
@@ -132,7 +132,24 @@
     }
   }
 
-  nav-bottom-desc {
+
+  .nav-bottom {
+    position: absolute;
+    left: 10%;
+    bottom: 20%;
+
+    h1 {
+      font-size: 2.9rem;
+      text-align: center;
+      font-weight: bold;
+      color: white;
+      animation: left-right 500ms linear;
+    }
+
+    @include left-right;
+  }
+
+  .nav-bottom-desc {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -146,6 +163,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      flex-direction: column;
       gap: 1rem;
       font-size: 1rem;
     }
