--- a/src/component/FeatureProduct/FeatureProduct.scss
+++ b/src/component/FeatureProduct/FeatureProduct.scss
@@ -131,6 +131,11 @@
     }
   }
 
+  .feature-product-details {
+    padding: 1rem 4rem;
+
+  }
+
   .feature-product-bottom {
     display: flex;
     justify-content: center;
