--- a/src/component/BottomExperience/BottomExperience.scss
+++ b/src/component/BottomExperience/BottomExperience.scss
@@ -33,6 +33,19 @@
   }
 }
 
+@include md {
+
+  .bottom-experience {
+    width: 90%;
+
+    h1 {
+      font-size: 2.7rem;
+      color: white;
+    }
+  }
+}
+
+//responsive for small devices less than 520px
 @include small {
 
   .bottom-experience {
