--- a/src/component/OurProduct/OurProduct.scss
+++ b/src/component/OurProduct/OurProduct.scss
@@ -133,6 +133,42 @@
   }
 }
 
+@include md {
+
+  .our-product {
+    width: 90%;
+  }
+
+  .our-product-card {
+    margin: 1rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    justify-content: center;
+    border-bottom: 1px solid lightgray;
+
+    .product-card-img {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      img {
+        width: 60%;
+        border-radius: 15px;
+      }
+    }
+
+    .product-card-tool {
+
+      .product-card-cart-btn {
+        button {
+          padding: 10px 1.5rem;
+        }
+      }
+    }
+  }
+}
+
 @include small {
   .our-product {
     width: 90%;
