--- a/src/component/FeatureTech/FeatureTech.scss
+++ b/src/component/FeatureTech/FeatureTech.scss
@@ -140,4 +140,11 @@
     }
   }
 
+  .feature-tech-news-card {
+    margin: 2rem auto;
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+
 }
