--- a/src/component/HeroNav/heroNav.scss
+++ b/src/component/HeroNav/heroNav.scss
@@ -139,7 +139,7 @@
     bottom: 20%;
 
     h1 {
-      font-size: 2.9rem;
+      font-size: 2.2rem;
       text-align: center;
       font-weight: bold;
       color: white;
@@ -156,21 +156,21 @@
     gap: 0.6;
     color: white;
     margin-top: 3rem;
+    max-width: 100%;
 
     animation: hide-seek 500ms linear;
 
     div {
       display: flex;
-      align-items: center;
-      justify-content: center;
       flex-direction: column;
-      gap: 1rem;
+      text-align: center;
       font-size: 1rem;
     }
 
     .hero-icon {
       font-size: 2rem;
       font-weight: lighter;
+      text-align: center;
       opacity: 0.8;
     }
   }
